--- a/Module 1 Programming Assignment(1).ipynb
+++ b/Module 1 Programming Assignment(1).ipynb
@@ -22,7 +22,7 @@
     "seconds_per_hour = 60 * 60\n",
     "seconds_per_hour * 24\n",
     "seconds_per_day = seconds_per_hour * 24\n",
-    "seconds_per_day // seconds_per_hour\n",
+    "seconds_per_day / seconds_per_hour\n",
     "seconds_per_day // seconds_per_hour"
    ]
   },
