Update M02 Programming Assignment.ipynb

--- a/M02 Programming Assignment.ipynb
+++ b/M02 Programming Assignment.ipynb
@@ -112,14 +112,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6cc62c0b-e448-453c-b56b-a028fb5083f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "too low\n",
+      "too low\n",
+      "too low\n",
+      "too low\n",
+      "too low\n",
+      "found it\n"
+     ]
+    }
+   ],
    "source": [
     "guess_me = 5\n",
-    "for number in range(10):"
+    "for number in range(10):\n",
+    "    if number < guess_me:\n",
+    "        print(\"too low\")\n",
+    "    elif number == guess_me:\n",
+    "        print(\"found it\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"oops\")\n",
+    "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915189a0-d764-4537-8442-7e2ded242b53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
